--- a/public/assets/custom/css/application.css
+++ b/public/assets/custom/css/application.css
@@ -6,12 +6,27 @@
   display: inline;
 }
 
+.edit-item {
+  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-size: 24px;
+}
+
+.completed {
+  text-decoration: line-through;
+}
+
 .font-please {
   z-index: 2;
 }
 
 .selected-category {
 
+}
+
+.custom-menu-header {
+  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  color: #FFFFFF;
+  border-bottom: 1px #333333 solid;
 }
 
 .header {
