--- a/public/assets/custom/css/application.css
+++ b/public/assets/custom/css/application.css
@@ -6,13 +6,14 @@
   display: inline;
 }
 
-.edit-item {
+.current-item-description {
   font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-size: 24px;
 }
 
 .completed {
   text-decoration: line-through;
+  opacity: 0.5;
 }
 
 .font-please {
