--- a/public/assets/custom/css/application.css
+++ b/public/assets/custom/css/application.css
@@ -38,6 +38,14 @@
   text-transform: lowercase;
 }
 
+.button-xsmall {
+  font-size: 70%;
+}
+
+.button-warning {
+  background: rgb(223, 117, 20); /* this is an orange */
+}
+
 .yellow-notebook-page {
   background: #fcf0ad;
 }
