--- a/public/assets/custom/css/application.css
+++ b/public/assets/custom/css/application.css
@@ -7,6 +7,10 @@ a.filters {
   color: black;
 }
 
+.red-text {
+  color: red;
+}
+
 .helveticaneue {
   font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; 
 }
